ボールをつかんでゴミ箱に入れられるようになった

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
+/[Ll]ogs/
 # 個人使用のAssetのもの
 /Assets/AssetStoreTools*
 /Assets/Snapcam/Scripts/Editor/Editor Default Resources/SceneSnaps*
